--- a/files/scenarios/http-dynamic-page-crawl.yaml
+++ b/files/scenarios/http-dynamic-page-crawl.yaml
@@ -8,6 +8,7 @@ filter: |
   evt.Parsed.verb == "GET" &&
   evt.Parsed.file_name != "admin-ajax.php" &&
   evt.Parsed.file_name != "post.php" &&
+  evt.Parsed.request not startsWith "/wp-admin/admin.php" &&
   evt.Parsed.file_dir != "/civicrm/report/instance/" &&
   evt.Parsed.file_dir != "/civicrm/mosaico/" &&
   evt.Parsed.file_dir not startsWith "/civicrm/ajax/" &&
