--- a/files/scenarios/http-dynamic-page-crawl.yaml
+++ b/files/scenarios/http-dynamic-page-crawl.yaml
@@ -16,6 +16,7 @@ filter: |
   evt.Parsed.file_dir != "/civicrm/asset/builder/" &&
   evt.Parsed.file_dir not startsWith "/civicrm/ajax/" &&
   evt.Parsed.request not startsWith  "/civicrm/file" &&
+  evt.Parsed.request not startsWith  "/civicrm/custom" &&
   evt.Parsed.file_dir not startsWith "/civicrm/contact/" &&
   evt.Parsed.file_name not startsWith "/.well-known/acme-challenge" &&
   evt.Parsed.http_args not endsWith "preview=true"
