--- a/files/scenarios/http-dynamic-page-crawl.yaml
+++ b/files/scenarios/http-dynamic-page-crawl.yaml
@@ -3,7 +3,7 @@ name: MegaphoneJon/http-dynamic-page-crawl
 description: >
   Detect headless scrapers requesting multiple dynamic pages without fetching static assets.
 distinct: evt.Meta.http_path
-# Add "evt.Parsed.static_ressource == "false" &&" to the top of the filter when trying to ID which lines triggered the scenario.
+# Add "  evt.Parsed.static_ressource == "false" &&" to the top of the filter when trying to ID which lines triggered the scenario.
 filter: |
   evt.Meta.service == "http" &&
   evt.Parsed.verb == "GET" &&
@@ -12,7 +12,7 @@ filter: |
   evt.Parsed.request not startsWith "/wp-admin/admin.php" &&
   evt.Parsed.request not startsWith "/wp-json" &&
   evt.Parsed.file_dir != "/civicrm/report/instance/" &&
-  evt.Parsed.file_dir != "/civicrm/mosaico/" &&
+  evt.Parsed.file_dir not startsWith "/civicrm/mosaico/" &&
   evt.Parsed.file_dir != "/civicrm/asset/builder/" &&
   evt.Parsed.file_dir not startsWith "/civicrm/ajax/" &&
   evt.Parsed.request not startsWith  "/civicrm/file" &&
