--- a/files/scenarios/http-dynamic-page-crawl.yaml
+++ b/files/scenarios/http-dynamic-page-crawl.yaml
@@ -12,6 +12,7 @@ filter: |
   evt.Parsed.request not startsWith "/wp-admin/admin.php" &&
   evt.Parsed.request not startsWith "/wp-admin/edit.php" &&
   evt.Parsed.request not startsWith "/wp-json" &&
+  evt.Parsed.request not startsWith "/entity_reference_autocomplete" &&
   evt.Parsed.file_dir != "/civicrm/report/instance/" &&
   evt.Parsed.file_dir not startsWith "/civicrm/mosaico/" &&
   evt.Parsed.file_dir != "/civicrm/asset/builder/" &&
